# mllaunchpad

./: .flake8  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  addition_example_cfg.yml  addition_example_model.py  clitool.py  config_EXAMPLE.yml  file.csv  iris_example_cfg.yml  iris_example_model.py  iris_holdout.csv  logging_cfg.yml  noxfile.py  orawrapper.bat  py.bat  pytest.ini  requirements.txt  setup.cfg  setup.py  test_oracle_resource.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: Makefile  about.rst  conf.py  config.rst  create_requirements_file.bat  datasources.rst  index.rst  installation.rst  license.rst  make.bat  mllaunchpad.rst  modules.rst  requirements.txt  usage.rst  why.rst
examples/: TEMPLATE.raml  TEMPLATE_cfg.yml  TEMPLATE_model.py  addition.raml  addition_cfg.yml  addition_model.py  bogusdatasource.py  complex.raml  complex_cfg.yml  complex_model.py  impala_datasource.py  impala_tree_cfg.yml  iris_pred_input.csv  iris_train.csv  orawrapper.bat  r_example.R  r_example_cfg.yml  r_model.py  records_datasource.py  records_datasources.py  spark_datasource.py  test.dtypes  test_simpel.csv  tree.raml  tree_cfg.yml  tree_model.py
examples/static/: tree.html
examples/testserver/: nginx.conf  start.sh
examples/testserver/ssl/: localhost.crt  localhost.key
launchpad/: __init__.py  __main__.py  api.py  config.py  logutil.py  model_actions.py  model_interface.py  modelinterface.py  resource.py  train.py  wsgi.py
mllaunchpad/: __init__.py  __main__.py  api.py  cli.py  config.py  datasources.py  logutil.py  model_actions.py  model_interface.py  resource.py  wsgi.py  yaml_loader.py
requirements/: dev-frozen-macos-python373.txt  dev-frozen-win32-python373.txt  dev.txt  docs.txt  examples.txt  prod.txt  test.txt
tests/: mock_model.py  mock_plugin.py  test_api.py  test_cli.py  test_config.py  test_datasources.py  test_examples.py  test_logutil.py  test_model_actions.py  test_resource.py  test_wsgi.py  test_yaml_loader.py
testserver/: .htpasswd  start.sh
