[bumpversion]
current_version = 0.0.7
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[flake8]
exclude = docs

[tool:pytest]
collect_ignore = ['setup.py']

[metadata]
name = mllaunchpad
version = 0.0.7
url = https://github.com/schuderer/mllaunchpad/
project_urls =
  Documentation = https://mllaunchpad.readthedocs.io/
  Changelog = https://mllaunchpad.readthedocs.io/en/latest/changelog.html
  Source = https://github.com/schuderer/mllaunchpad
  Issues = https://github.com/schuderer/mllaunchpad/issues
author = Andreas Schuderer
author_email = pypi@schuderer.net
license = Apache License, Version 2.0
license_file = LICENSE
description = Deploy Machine Learning Solutions with Ease
long_description = file: README.rst
keywords= mllaunchpad, abstraction layer, publishing, deployment, machine learning, lifecycle
classifiers =
"Development Status :: 4 - Beta",
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: Apache Software License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
zip_safe = True
include_package_data = True
setup_requires = setuptools >= 38.3.0
packages = find:
python_requires = >= 3.6
install_requires =
  flask
  flask-restful
  ramlfications
  dill
  pandas
  pyyaml

[options.extras_require]
docs =
  sphinx
  sphinx-autobuild
lint =
  flake8
  flake8-import-order
  black
  bandit
release =
  twine
  wheel
  bumpversion
test =
  pytest
  pytest-runner
  pytest-cov
  coverage
dev =
  nox
  ipykernel; sys_platform == 'darwin'
  python-language-server[all]; sys_platform == 'darwin'
  %(docs)s
  %(lint)s
  %(release)s
  %(test)s
examples =
  cx-oracle
  scikit-learn
  keras
  tensorflow
  # Gunicorn only works on Linux and macOS:
  gunicorn; sys_platform == 'darwin'
  # Removed rpy2 due to incompatibility of its wheel on Windows:
  # The conda install of 2.9.4 on Windows works (you have to adapt some code)
  #rpy2==2.9.4; sys_platform == 'win32'
  #rpy2==3.0.4; sys_platform == 'darwin'
  # tzlocal is no requirement of launchpad but of rpy2.python2pi:
  #tzlocal

[options.entry_points]
  console_scripts =
      mllaunchpad = mllaunchpad.cli:main
