[mypy]
# Be lenient for now:
disallow_untyped_defs = False
ignore_missing_imports = True

[flake8]
exclude = docs
per-file-ignores = __init__.py:F401
# Ignore black styles.
ignore = E501, W503

[isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=0
multi_line_output=3
not_skip=__init__.py,__main__.py
use_parentheses=true
import_heading_stdlib=Stdlib imports
import_heading_thirdparty=Third-party imports
import_heading_firstparty=Project imports
known_first_party=mllaunchpad
known_third_party=click,dill,flask,flask_restful,nox,numpy,pandas,pkg_resources,pyspark,pytest,ramlfications,rpy2,setuptools,sklearn,sqlalchemy,werkzeug,yaml
# known_third_party=pandas,numpy,flask,flask-restful,ramlfications,werkzeug,sklearn,dill,pyyaml,pytest
# known_third_party=pytest  # rest is installed so isort can detect it

[tool:pytest]
collect_ignore = ['setup.py']
filterwarnings =
    ignore:.*ABCs.*:DeprecationWarning:flask_restful.*:17
    ignore::DeprecationWarning:jinja2.*:
;    ignore::DeprecationWarning:watchdog.*:

[metadata]
name = mllaunchpad
version = 1.0.0
url = https://github.com/schuderer/mllaunchpad/
project_urls =
  Documentation = https://mllaunchpad.readthedocs.io/
  Changelog = https://mllaunchpad.readthedocs.io/en/latest/changelog.html
  Source = https://github.com/schuderer/mllaunchpad
  Issues = https://github.com/schuderer/mllaunchpad/issues
author = Andreas Schuderer
author_email = pypi@schuderer.net
license = Apache License, Version 2.0
license_file = LICENSE
description = Deploy Machine Learning Solutions with Ease
long_description = file: README.rst
keywords= mllaunchpad, abstraction layer, publishing, deployment, machine learning, lifecycle
classifiers =
  Development Status :: 5 - Production/Stable
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: Apache Software License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
zip_safe = True
include_package_data = True
setup_requires = setuptools >= 38.3.0
packages = find:
python_requires = >= 3.6
install_requires =
  flask
  flask-restful
  werkzeug
  ramlfications
  dill
  pandas
  numpy
  pyyaml
  Click

[options.extras_require]
docs =
  Sphinx==2.4.3
  sphinx-autobuild==0.7.1
  sphinx-click==2.3.1
  sphinxcontrib-apidoc==0.3.0
  docutils==0.17.1
lint =
  seed-isort-config
  isort
  black
  mypy
  flake8
  flake8-isort
  bandit
release =
  twine
  wheel
test =
  pytest==5.3.5
  pytest-runner==5.2
  pytest-cov==2.8.1
  coverage==5.0.3
dev =
  nox
  ipykernel; sys_platform == 'darwin'
  python-language-server[all]; sys_platform == 'darwin'
  %(docs)s
  %(lint)s
  %(release)s
  %(test)s
examples =
  cx-oracle
  scikit-learn
  keras
  tensorflow
  # Gunicorn only works on Linux and macOS:
  gunicorn; sys_platform == 'darwin'
  # Removed rpy2 due to incompatibility of its wheel on Windows:
  # The conda install of 2.9.4 on Windows works (you have to adapt some code)
  #rpy2==2.9.4; sys_platform == 'win32'
  #rpy2==3.0.4; sys_platform == 'darwin'
  # tzlocal is no requirement of launchpad but of rpy2.python2pi:
  #tzlocal

[options.entry_points]
console_scripts =
  mllaunchpad = mllaunchpad.cli:main
